# xaudio

./: .gitignore  .prettierrc  .vimspector.json  Cargo.toml  Dockerfile  README.md  entrypoint.sh  heroku.yml  output.json
.github/workflows/: docker-image.yml
src/: billboard.rs  cache.rs  main.rs  redis_actor.rs  youtube.rs
www_src/: .parcelrc  MediaPlayerState.tsx  context.tsx  index.html  index.tsx  package-lock.json  package.json  playlist.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
www_src/@types/assets/: index.d.ts
www_src/components/audio-player/: index.tsx
www_src/components/media-playlist/: index.tsx
www_src/components/progress-bar/: index.tsx
www_src/components/search-area/: index.tsx
www_src/components/svg/: index.tsx
www_src/components/volume-control/: index.tsx
www_src/data/: template-playlist.json
www_src/lib/: api.ts  utils.ts
www_src/pages/now-playing/: index.tsx
