[package]
name = "tubemusic"
version = "0.1.0"
authors = ["Huy Tran <hey@huy.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.115"
serde = "1.0.115"
serde_json = "1.0.57"
actix = "0.10.0"
actix-web = "3.3.2"
actix-files = "0.3"
reqwest = { version = "0.10.7", features = ["json", "stream"] }
futures = "0.3.8"
csv = "1.1.3"
actix-rt = "1.1.1"
actix-redis = "0.9.1"
redis-async = "0.6.3"